Bug 1260031 followup - Remove unused parameter of BlockReflowInput::ComputeBlockAvailSpace. r=dbaron

MozReview-Commit-ID: 7ZZ0xw9l4YZ